# test

./: .gitignore  BP_multi.py  SimPixel_test.py  args.py  attrs_test.py  bash.sh  bp_test_2.py  call.py  classes.py  classes2.py  classy.py  cloning.py  compile_test.py  compiling.py  contained_classes.py  controlled.json  deleter.h  dir_test.py  domain-names.txt  fade.scpt  garbage_collection.py  get_ns.py  get_whois.py  getitem.py  globals.py  ic.py  index.html  inline_class.py  json_files.txt  json_test.py  locals.py  long-strings.yml  maze.py  merge_sort_test  methods.py  multi.py  multiple_inheritance.py  my_sub.py  names.py  nonlocal_test.py  (+23 more)
bash/: add-manifests.sh  copy_files.sh  copy_files_1.sh  copy_files_2.sh  ffm.sh  fix_annotations.sh  inline_python.sh  iteration.sh  long_running.sh  ping_test.sh  richie-move.sh  stupid-bash.sh  tar_gz_test.tar  test_git_clean.sh  test_if.sh  test_loop.sh  tests.sh  variables.sh
cpp/: big.cpp  cpp_test.cpp  insert.cpp  merge_sort.h  merge_sort_test.cpp  sample_type.h  test  test.cpp  topics.txt  write.h
data/: dutch-words.txt  register-spook.txt
directories/: maze.py
docker/: Dockerfile-test
git/: test-log.txt
md/: AGENTS.md
projects/: 00-strip.json
python/: BP_test.py  abc_test.py  add_annotations.py  add_bool.py  almost_increasing.py  animals.py  annotations.py  app.py  arithmetic_ops.py  asy.py  async_python.py  atexit_test.py  attribute.py  attrs_test.py  basher.py  before.py  bool_and_len.py  break_test.py  c_code.py  cache_method.py  cached2.py  cached_class.py  calc.py  calcs.py  call_test.py  candy.py  (+273 more)
(+64 files in other folders)
