[tool.coverage]
[tool.coverage.run]
branch = true

[tool.coverage.report]
skip_covered = true
exclude_lines = ["pragma: no cover", "if False:", "if __name__ == .__main__.:", "raise NotImplementedError"]


[tool.ruff.format]
quote-style = "single"
[dependency-groups]
dev = [
    "coverage>=7.13.2",
    "numpy>=2.2.6",
    "pyupgrade>=3.21.2",
    "ruff>=0.14.14",
    "ty>=0.0.14",
]

[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Tom Ritchford <tom@swirly.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
